--- a/ms-express-products/package.json
+++ b/ms-express-products/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "winston": "^3.10.0"
   },
