--- a/ms-express-products/package.json
+++ b/ms-express-products/package.json
@@ -15,12 +15,14 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "mongoose": "^7.4.5",
     "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.6",
     "@types/nodemon": "^1.19.2",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
