--- a/ms-express-products/package.json
+++ b/ms-express-products/package.json
@@ -16,7 +16,8 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "mongoose": "^7.4.5",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
